--- a/config/tutorials/_default/config.toml
+++ b/config/tutorials/_default/config.toml
@@ -82,6 +82,10 @@ defaultContentLang = 'en'
      	  name = "Aspose.ZIP Tutorials"
 	  url = "/zip/"
    	  weight = 100
+	  	[[languages.en.menu.main]]
+     	  name = "Aspose.Drawing Tutorials"
+	  url = "/drawing/"
+   	  weight = 110
   [languages.ru]
     contentDir = 'content/russian'
     languageName = 'Русский'
@@ -129,6 +133,10 @@ defaultContentLang = 'en'
      	  name = "Aspose.ZIP Учебники"
 	  url = "/zip/ru/"
    	  weight = 100
+		[[languages.ru.menu.main]]
+     	  name = "Aspose.Drawing Учебники"
+	  url = "/drawing/ru/"
+   	  weight = 110
   [languages.zh]
     contentDir = 'content/chinese'
     languageName = "简体中文"
@@ -176,6 +184,10 @@ defaultContentLang = 'en'
      	  name = "Aspose.ZIP 教程"
 	  url = "/zip/zh/"
    	  weight = 100
+		[[languages.zh.menu.main]]
+     	  name = "Aspose.Drawing 教程"
+	  url = "/drawing/zh/"
+   	  weight = 110
   [languages.ar]
     contentDir = 'content/arabic'
     languageName = "عربي"
@@ -222,7 +234,11 @@ defaultContentLang = 'en'
 	  	[[languages.ar.menu.main]]
      	  name = "Aspose.ZIP دروس"
 	  url = "/zip/ar/"
-   	  weight = 100 	  
+   	  weight = 100
+	  	[[languages.ar.menu.main]]
+     	  name = "Aspose.Drawing دروس"
+	  url = "/drawing/ar/"
+   	  weight = 110 	  
   [languages.fr]
     contentDir = 'content/french'
     languageName = "Français"
@@ -269,7 +285,11 @@ defaultContentLang = 'en'
 	  	[[languages.fr.menu.main]]
      	  name = "Aspose.ZIP Tutoriels"
 	  url = "/zip/fr/"
-   	  weight = 100	  
+   	  weight = 100
+	  	[[languages.fr.menu.main]]
+     	  name = "Aspose.Drawing Tutoriels"
+	  url = "/drawing/fr/"
+   	  weight = 110	  
   [languages.de]
     contentDir = 'content/german'
     languageName = "Deutsch"
@@ -316,7 +336,11 @@ defaultContentLang = 'en'
 	  	[[languages.de.menu.main]]
      	  name = "Aspose.ZIP-Tutorials"
 	  url = "/zip/de/"
-   	  weight = 100	  
+   	  weight = 100
+	  	[[languages.de.menu.main]]
+     	  name = "Aspose.Drawing-Tutorials"
+	  url = "/drawing/de/"
+   	  weight = 110	  
   [languages.it]
     contentDir = 'content/italian'
     languageName = "Italiano"
@@ -360,10 +384,14 @@ defaultContentLang = 'en'
      	  name = "Aspose.CAD Tutorial"
 	  url = "/cad/it/"
    	  weight = 90
-	  	[[languages.it.menu.main]]
+		[[languages.it.menu.main]]
      	  name = "Aspose.ZIP Tutorial"
 	  url = "/zip/it/"
-   	  weight = 100	  
+   	  weight = 100
+		[[languages.it.menu.main]]
+     	  name = "Aspose.Drawing Tutorial"
+	  url = "/drawing/it/"
+   	  weight = 110
   [languages.es]
     contentDir = 'content/spanish'
     languageName = "Español"
@@ -410,7 +438,11 @@ defaultContentLang = 'en'
 	  	[[languages.es.menu.main]]
      	  name = "Tutoriales de Aspose.ZIP"
 	  url = "/zip/es/"
-   	  weight = 100	  	  
+   	  weight = 100
+	  	[[languages.es.menu.main]]
+     	  name = "Tutoriales de Aspose.Drawing"
+	  url = "/drawing/es/"
+   	  weight = 110	  
   [languages.sv]
     contentDir = 'content/swedish'
     languageName = "Svenska"
@@ -457,7 +489,11 @@ defaultContentLang = 'en'
 	  	[[languages.sv.menu.main]]
      	  name = "Aspose.ZIP Tutorials"
 	  url = "/zip/sv/"
-   	  weight = 100		  
+   	  weight = 100
+	  	[[languages.sv.menu.main]]
+     	  name = "Aspose.Drawing Tutorials"
+	  url = "/drawing/sv/"
+   	  weight = 110	  
   [languages.tr]
     contentDir = 'content/turkish'
     languageName = "Türkçe"
@@ -504,7 +540,11 @@ defaultContentLang = 'en'
 	  	[[languages.tr.menu.main]]
      	  name = "Aspose.ZIP Eğitimleri"
 	  url = "/zip/tr/"
-   	  weight = 100	  
+   	  weight = 100
+	  	[[languages.tr.menu.main]]
+     	  name = "Aspose.Drawing Eğitimleri"
+	  url = "/drawing/tr/"
+   	  weight = 110	  
     
 ignoreFiles = ["(?i:readme.md)", '\.spin$']
 
