--- a/config/tutorials/_default/config.toml
+++ b/config/tutorials/_default/config.toml
@@ -86,6 +86,14 @@ defaultContentLang = 'en'
      	  name = "Aspose.Drawing Tutorials"
 	  url = "/drawing/"
    	  weight = 110
+		[[languages.en.menu.main]]
+     	  name = "Aspose.OCR Tutorials"
+	  url = "/ocr/"
+   	  weight = 120
+		[[languages.en.menu.main]]
+     	  name = "Aspose.PSD Tutorials"
+	  url = "/psd/"
+   	  weight = 130
   [languages.ru]
     contentDir = 'content/russian'
     languageName = 'Русский'
@@ -137,6 +145,14 @@ defaultContentLang = 'en'
      	  name = "Aspose.Drawing Учебники"
 	  url = "/drawing/ru/"
    	  weight = 110
+		[[languages.ru.menu.main]]
+     	  name = "Aspose.OCR Учебники"
+	  url = "/ocr/ru/"
+   	  weight = 120
+		[[languages.ru.menu.main]]
+     	  name = "Aspose.PSD Учебники"
+	  url = "/psd/ru/"
+   	  weight = 130
   [languages.zh]
     contentDir = 'content/chinese'
     languageName = "简体中文"
@@ -188,6 +204,14 @@ defaultContentLang = 'en'
      	  name = "Aspose.Drawing 教程"
 	  url = "/drawing/zh/"
    	  weight = 110
+		[[languages.zh.menu.main]]
+     	  name = "Aspose.OCR 教程"
+	  url = "/ocr/zh/"
+   	  weight = 120
+		[[languages.zh.menu.main]]
+     	  name = "Aspose.PSD 教程"
+	  url = "/psd/zh/"
+   	  weight = 130
   [languages.ar]
     contentDir = 'content/arabic'
     languageName = "عربي"
@@ -238,7 +262,15 @@ defaultContentLang = 'en'
 	  	[[languages.ar.menu.main]]
      	  name = "Aspose.Drawing دروس"
 	  url = "/drawing/ar/"
-   	  weight = 110 	  
+   	  weight = 110 	 
+	  	[[languages.ar.menu.main]]
+     	  name = "Aspose.OCR دروس"
+	  url = "/ocr/ar/"
+   	  weight = 120
+	  	[[languages.ar.menu.main]]
+     	  name = "Aspose.PSD دروس"
+	  url = "/psd/ar/"
+   	  weight = 130  	  
   [languages.fr]
     contentDir = 'content/french'
     languageName = "Français"
@@ -289,7 +321,15 @@ defaultContentLang = 'en'
 	  	[[languages.fr.menu.main]]
      	  name = "Aspose.Drawing Tutoriels"
 	  url = "/drawing/fr/"
-   	  weight = 110	  
+   	  weight = 110
+	  	[[languages.fr.menu.main]]
+     	  name = "Aspose.OCR Tutoriels"
+	  url = "/ocr/fr/"
+   	  weight = 120
+	  	[[languages.fr.menu.main]]
+     	  name = "Aspose.PSD Tutoriels"
+	  url = "/psd/fr/"
+   	  weight = 130	  
   [languages.de]
     contentDir = 'content/german'
     languageName = "Deutsch"
@@ -340,7 +380,15 @@ defaultContentLang = 'en'
 	  	[[languages.de.menu.main]]
      	  name = "Aspose.Drawing-Tutorials"
 	  url = "/drawing/de/"
-   	  weight = 110	  
+   	  weight = 110
+	  	[[languages.de.menu.main]]
+     	  name = "Aspose.OCR-Tutorials"
+	  url = "/ocr/de/"
+   	  weight = 120
+	  	[[languages.de.menu.main]]
+     	  name = "Aspose.PSD-Tutorials"
+	  url = "/psd/de/"
+   	  weight = 130	  
   [languages.it]
     contentDir = 'content/italian'
     languageName = "Italiano"
@@ -392,6 +440,14 @@ defaultContentLang = 'en'
      	  name = "Aspose.Drawing Tutorial"
 	  url = "/drawing/it/"
    	  weight = 110
+		[[languages.it.menu.main]]
+     	  name = "Aspose.OCR Tutorial"
+	  url = "/ocr/it/"
+   	  weight = 120
+		[[languages.it.menu.main]]
+     	  name = "Aspose.PSD Tutorial"
+	  url = "/psd/it/"
+   	  weight = 130
   [languages.es]
     contentDir = 'content/spanish'
     languageName = "Español"
@@ -442,7 +498,15 @@ defaultContentLang = 'en'
 	  	[[languages.es.menu.main]]
      	  name = "Tutoriales de Aspose.Drawing"
 	  url = "/drawing/es/"
-   	  weight = 110	  
+   	  weight = 110
+	  	[[languages.es.menu.main]]
+     	  name = "Tutoriales de Aspose.OCR"
+	  url = "/ocr/es/"
+   	  weight = 120
+	  	[[languages.es.menu.main]]
+     	  name = "Tutoriales de Aspose.PSD"
+	  url = "/psd/es/"
+   	  weight = 130	  
   [languages.sv]
     contentDir = 'content/swedish'
     languageName = "Svenska"
@@ -493,7 +557,15 @@ defaultContentLang = 'en'
 	  	[[languages.sv.menu.main]]
      	  name = "Aspose.Drawing Tutorials"
 	  url = "/drawing/sv/"
-   	  weight = 110	  
+   	  weight = 110
+	  	[[languages.sv.menu.main]]
+     	  name = "Aspose.OCR Tutorials"
+	  url = "/ocr/sv/"
+   	  weight = 120
+	  	[[languages.sv.menu.main]]
+     	  name = "Aspose.PSD Tutorials"
+	  url = "/psd/sv/"
+   	  weight = 130	  
   [languages.tr]
     contentDir = 'content/turkish'
     languageName = "Türkçe"
@@ -544,7 +616,15 @@ defaultContentLang = 'en'
 	  	[[languages.tr.menu.main]]
      	  name = "Aspose.Drawing Eğitimleri"
 	  url = "/drawing/tr/"
-   	  weight = 110	  
+   	  weight = 110
+	  	[[languages.tr.menu.main]]
+     	  name = "Aspose.OCR Eğitimleri"
+	  url = "/ocr/tr/"
+   	  weight = 120
+	  	[[languages.tr.menu.main]]
+     	  name = "Aspose.PSD Eğitimleri"
+	  url = "/psd/tr/"
+   	  weight = 130	  
     
 ignoreFiles = ["(?i:readme.md)", '\.spin$']
 
